ayat fragment created

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/translationFragment2">
+    app:startDestination="@id/translationFragment">
     <fragment
-        android:id="@+id/translationFragment2"
-        android:name="com.bismillah.quran.ui.translation.TranslationListFragment"
-        android:label="TranslationFragment" />
+        android:id="@+id/translationFragment"
+        android:name="com.bismillah.quran.ui.sure.SureListFragment"
+        android:label="TranslationFragment">
+        <action
+            android:id="@+id/action_translationFragment_to_ayatListFragment"
+            app:destination="@id/ayatListFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
+    <fragment
+        android:id="@+id/ayatListFragment"
+        android:name="com.bismillah.quran.ui.ayat.AyatListFragment"
+        android:label="AyatListFragment" >
+
+        <action
+            android:id="@+id/action_ayatListFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+
+        <argument
+            android:name="sureId"
+            app:argType="integer"
+            android:defaultValue="0" />
+    </fragment>
 </navigation>
