--- a/app/src/main/res/layout/item_sure.xml
+++ b/app/src/main/res/layout/item_sure.xml
@@ -36,34 +36,33 @@
         android:gravity="bottom"
         android:textColor="@android:color/background_dark"
         android:textSize="@dimen/text_size_standard"
-        app:layout_constraintEnd_toStartOf="@id/ivArabic"
+        app:layout_constraintEnd_toStartOf="@id/tvOriginalName"
         app:layout_constraintStart_toEndOf="@id/ivNumberBg"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvOriginalName"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/margin_standard"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:gravity="bottom|end"
+        android:textSize="@dimen/arab_text_standard_size"
+        android:textColor="@android:color/background_dark"/>
 
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_standard"
-        android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_standard"
         android:layout_marginBottom="@dimen/margin_standard"
         android:minHeight="20dp"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ivArabic"
-        app:layout_constraintStart_toEndOf="@id/ivNumberBg"
-        app:layout_constraintTop_toBottomOf="@id/tvName"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <ImageView
-        android:id="@+id/ivArabic"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="@dimen/margin_standard"
-        android:src="@drawable/ic_book_primary_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/ivNumberBg"
+        app:layout_constraintTop_toBottomOf="@id/tvName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
