--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -15,6 +15,7 @@
     <item
         android:id="@+id/item_search"
         android:title="@string/search"
+        android:icon="@drawable/ic_search_white_24dp"
         app:showAsAction="always"/>
 
 </menu>
