--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#D5D554</color>
     <color name="white">#ffffff</color>
     <color name="transparent_white">#A3FFFFFF</color>
+    <color name="transparent_dark">#A4000000</color>
 </resources>
