--- a/app/src/main/res/layout/fragment_ayat_list.xml
+++ b/app/src/main/res/layout/fragment_ayat_list.xml
@@ -67,7 +67,8 @@
                 android:layout_centerVertical="true"
                 android:textSize="@dimen/tool_bar_text_size"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:layout_toStartOf="@id/btnMinus"/>
 
         </RelativeLayout>
 
