--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -10,7 +10,8 @@
     <item
         android:id="@+id/item_explanation"
         android:title="@string/explanation"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        android:icon="@drawable/bg_explanation_item"/>
 
     <item
         android:id="@+id/item_search"
