--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_translationFragment_to_originalAyatFragment"
+            app:destination="@id/originalAyatFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/ayatListFragment"
@@ -37,15 +44,17 @@
         android:id="@+id/ayatExplanationFragment"
         android:name="com.bismillah.quran.ui.explanation.ayat.AyatExplanationFragment"
         android:label="AyatExplanationFragment">
-        <action
-            android:id="@+id/ayatExplanationFragmentAction"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
         <argument
             android:name="explanationNumber"
             android:defaultValue="0" />
         <argument android:name="sureName" />
+    </fragment>
+    <fragment
+        android:id="@+id/originalAyatFragment"
+        android:name="com.bismillah.quran.ui.ayatoriginal.OriginalAyatFragment"
+        android:label="OriginalAyatFragment" >
+        <argument
+            android:name="sureId"
+            android:defaultValue="0" />
     </fragment>
 </navigation>
