--- a/app/src/main/res/layout/fragment_ayat_original.xml
+++ b/app/src/main/res/layout/fragment_ayat_original.xml
@@ -71,7 +71,7 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvOriginalAyatList"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
