--- a/app/src/main/res/layout/fragment_simple_reading_list.xml
+++ b/app/src/main/res/layout/fragment_simple_reading_list.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
     <RelativeLayout
         android:id="@+id/appBarLayout"
