--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="margin_small">8dp</dimen>
     <dimen name="text_size_standard">16sp</dimen>
     <dimen name="margin_standard">16dp</dimen>
     <dimen name="arab_text_standard_size">18sp</dimen>
     <dimen name="tool_bar_text_size">20sp</dimen>
     <dimen name="margin_large">32dp</dimen>
+    <dimen name="design_bottom_navigation_text_size" tools:override="true">12sp</dimen>
+    <dimen name="design_bottom_navigation_active_text_size" tools:override="true">12sp</dimen>
 </resources>
