--- a/app/src/main/res/drawable/background_search.xml
+++ b/app/src/main/res/drawable/background_search.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <stroke android:color="@android:color/darker_gray" android:width="2dp"/>
-    <corners android:radius="4dp"/>
+    <solid android:color="?attr/secondaryBgColor"/>
+    <stroke android:color="?attr/borderColor" android:width="1dp"/>
+    <corners android:radius="2dp"/>
 </shape>
