--- a/app/src/main/res/layout/fragment_ayat_list.xml
+++ b/app/src/main/res/layout/fragment_ayat_list.xml
@@ -2,75 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/bgColor">
 
-        <RelativeLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
-                app:popupTheme="@style/Theme.AppCompat.Light"
-                app:theme="@style/ToolBarStyle"/>
-
-            <ImageView
-                android:id="@+id/backButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_arrow_back_white_24dp"
-                android:padding="@dimen/margin_small"
-                android:layout_marginTop="@dimen/margin_small"
-                android:layout_marginStart="@dimen/margin_small"
-                android:contentDescription="@string/todo"
-                android:background="@drawable/ripple_effect" />
-
-            <ImageView
-                android:id="@+id/btnMinus"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_minus_white_24dp"
-                android:layout_toStartOf="@id/btnPlus"
-                android:padding="@dimen/margin_small"
-                android:layout_marginTop="@dimen/margin_small"
-                android:contentDescription="@string/todo"
-                android:clickable="true"
-                android:focusable="true"
-                android:background="@drawable/ripple_effect"/>
-
-            <ImageView
-                android:id="@+id/btnPlus"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_add_white_24dp"
-                android:layout_alignParentEnd="true"
-                android:padding="@dimen/margin_small"
-                android:layout_marginTop="@dimen/margin_small"
-                android:layout_marginEnd="@dimen/margin_small"
-                android:contentDescription="@string/todo"
-                android:background="@drawable/ripple_effect"
-                android:clickable="true"
-                android:focusable="true" />
-
-            <TextView
-                android:id="@+id/tvToolbarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/backButton"
-                android:layout_marginStart="@dimen/margin_small"
-                android:layout_centerVertical="true"
-                android:textSize="@dimen/tool_bar_text_size"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:layout_toStartOf="@id/btnMinus"/>
-
-        </RelativeLayout>
+    <include layout="@layout/reading_page_toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAyat"
