--- a/app/src/main/res/layout/fragment_sure_list.xml
+++ b/app/src/main/res/layout/fragment_sure_list.xml
@@ -4,38 +4,10 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/bgColor">
 
-        <RelativeLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
-                app:popupTheme="@style/Theme.AppCompat.Light"
-                app:theme="@style/ToolBarStyle">
-            </androidx.appcompat.widget.Toolbar>
-
-            <TextView
-                android:id="@+id/tv_toolbar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="72dp"
-                android:layout_centerVertical="true"
-                android:textSize="@dimen/tool_bar_text_size"
-                android:textStyle="bold"
-                android:text="@string/app_name"
-                android:textColor="@color/white" />
-
-        </RelativeLayout>
-
+    <include layout="@layout/main_toolbar"/>
 
     <RelativeLayout
         android:id="@+id/rlSearch"
@@ -46,8 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/margin_small"
         android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_small"
-        >
+        android:layout_marginEnd="@dimen/margin_small">
 
         <EditText
             android:id="@+id/etSearch"
@@ -55,6 +26,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_search"
             android:hint="@string/search_by_title"
+            android:textColorHint="?attr/metaTextColor"
+            android:textColor="?attr/textColor"
             android:padding="@dimen/margin_small"
             android:textSize="@dimen/text_size_standard"
             android:drawableStart="@drawable/ic_search_black_24dp"
