--- a/app/src/main/res/layout/item_sure.xml
+++ b/app/src/main/res/layout/item_sure.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@android:color/background_dark"
+        android:textColor="?attr/textColor"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/ivNumberBg"
         app:layout_constraintEnd_toEndOf="@id/ivNumberBg"
@@ -35,7 +35,7 @@
         android:layout_marginStart="@dimen/margin_standard"
         android:layout_marginEnd="@dimen/margin_standard"
         android:gravity="bottom"
-        android:textColor="@android:color/background_dark"
+        android:textColor="?attr/textColor"
         android:textSize="@dimen/text_size_standard"
         app:layout_constraintEnd_toStartOf="@id/tvOriginalName"
         app:layout_constraintStart_toEndOf="@id/ivNumberBg"
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="bottom|end"
         android:textSize="@dimen/arab_text_standard_size"
-        android:textColor="@android:color/background_dark" />
+        android:textColor="?attr/textColor" />
 
     <TextView
         android:id="@+id/tvDescription"
@@ -61,6 +61,7 @@
         android:paddingBottom="@dimen/margin_standard"
         android:minHeight="20dp"
         android:textSize="12sp"
+        android:textColor="?attr/metaTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ivNumberBg"
