--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#0e4a16</color>
     <color name="colorPrimaryDark">#002300</color>
+    <color name="colorStatusBarDark">#131313</color>
     <color name="colorPrimaryLight">#3f763f</color>
     <color name="colorAccent">#fff59d</color>
     <color name="white">#ffffff</color>
