--- a/app/src/main/res/layout/item_sure.xml
+++ b/app/src/main/res/layout/item_sure.xml
@@ -1,70 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground">
 
-    <ImageView
-        android:id="@+id/ivNumberBg"
+    <FrameLayout
         android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="@dimen/margin_standard"
-        android:background="@drawable/bg_number"
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/margin_standard">
 
-    <TextView
-        android:id="@+id/tvNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="?attr/textColor"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/ivNumberBg"
-        app:layout_constraintEnd_toEndOf="@id/ivNumberBg"
-        app:layout_constraintStart_toStartOf="@id/ivNumberBg"
-        app:layout_constraintTop_toTopOf="@id/ivNumberBg" />
+        <ImageView
+            android:id="@+id/ivNumberBg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:contentDescription="@string/todo"
+            android:background="@drawable/bg_number"
+            android:layout_gravity="center"/>
 
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="@dimen/margin_standard"
-        android:layout_marginEnd="@dimen/margin_standard"
-        android:gravity="bottom"
-        android:textColor="?attr/textColor"
-        android:textSize="@dimen/text_size_standard"
-        app:layout_constraintEnd_toStartOf="@id/tvOriginalName"
-        app:layout_constraintStart_toEndOf="@id/ivNumberBg"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="?attr/textColor"
+            android:textSize="12sp" />
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/tvOriginalName"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/margin_standard"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="bottom|end"
-        android:textSize="@dimen/arab_text_standard_size"
-        android:textColor="?attr/textColor" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/margin_standard"
-        android:paddingEnd="@dimen/margin_standard"
-        android:paddingBottom="@dimen/margin_standard"
-        android:minHeight="20dp"
-        android:textSize="12sp"
-        android:textColor="?attr/metaTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ivNumberBg"
-        app:layout_constraintTop_toBottomOf="@id/tvName" />
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="@dimen/margin_standard"
+            android:layout_marginEnd="@dimen/margin_standard"
+            android:gravity="bottom"
+            android:textColor="?attr/textColor"
+            android:textSize="@dimen/text_size_standard"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/tvOriginalName"
+            android:layout_alignParentTop="true"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvOriginalName"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginEnd="@dimen/margin_standard"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:gravity="bottom|end"
+            android:textSize="@dimen/arab_text_standard_size"
+            android:textColor="?attr/textColor" />
+
+        <TextView
+            android:id="@+id/tvDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/margin_standard"
+            android:minHeight="20dp"
+            android:textSize="12sp"
+            android:textColor="?attr/metaTextColor"
+            android:layout_alignParentEnd="true"
+            android:layout_alignStart="@id/tvName"
+            android:layout_below="@id/tvName" />
+
+
+    </RelativeLayout>
+
+</LinearLayout>
