favorite list is ready

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -84,4 +84,16 @@
             android:name="sureName"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/favoriteListFragment"
+        android:name="com.bismillah.quran.ui.favorites.FavoriteListFragment"
+        android:label="FavoriteListFragment" >
+        <action
+            android:id="@+id/action_favoriteListFragment_to_ayatExplanationFragment"
+            app:destination="@id/ayatExplanationFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
 </navigation>
