--- a/app/src/main/res/layout/item_ayat.xml
+++ b/app/src/main/res/layout/item_ayat.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/tvText"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/margin_standard"
-    android:textSize="@dimen/text_size_standard"
-    android:textColor="?attr/textColor"
-    android:drawablePadding="16dp"
-    android:textColorLink="@color/color_link"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/tvText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_standard"
+        android:layout_marginTop="@dimen/margin_standard"
+        android:layout_marginEnd="@dimen/margin_standard"
+        android:textColor="?attr/textColor"
+        android:textColorLink="@color/color_link"
+        android:textSize="@dimen/text_size_standard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/optionBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="@dimen/margin_small"
+        android:background="@drawable/ripple_by_theme"
+        android:contentDescription="@string/todo"
+        android:padding="@dimen/margin_small"
+        android:src="@drawable/ic_more_horiz_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvText" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
