--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_large"
         android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/btnMode"
         android:layout_centerVertical="true"
         android:textSize="@dimen/tool_bar_text_size"
         android:textStyle="bold"
