--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -27,6 +27,12 @@
         android:textSize="@dimen/tool_bar_text_size"
         android:textStyle="bold"
         android:text="@string/app_name"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scrollHorizontally="true"
         android:textColor="@color/white" />
 
     <ImageView
