--- a/app/src/main/res/layout/reading_page_toolbar.xml
+++ b/app/src/main/res/layout/reading_page_toolbar.xml
@@ -59,10 +59,17 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/backButton"
         android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
         android:layout_centerVertical="true"
         android:textSize="@dimen/tool_bar_text_size"
         android:textStyle="bold"
         android:textColor="@color/white"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scrollHorizontally="true"
         android:layout_toStartOf="@id/btnMinus"/>
 
 </RelativeLayout>
