--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -20,7 +20,7 @@
         android:icon="@drawable/ic_favorite_white_24dp"/>
 
     <item
-        android:id="@+id/additionalInfoFragment"
+        android:id="@+id/infoListFragment"
         android:title="@string/additional"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_description_black_24dp"/>
