--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -26,7 +26,7 @@
         android:icon="@drawable/ic_description_black_24dp"/>
 
     <item
-        android:id="@+id/item_search"
+        android:id="@+id/searchFragment"
         android:title="@string/search"
         android:icon="@drawable/ic_search_white_24dp"
         app:showAsAction="always"/>
