--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="transparent_dark">#A4000000</color>
     <color name="color_link">#E3004E</color>
     <color name="popupMenuDark">#303030</color>
+    <color name="splash_bg_color">#72BF9D</color>
 </resources>
